Externalize java options into properties file
These options are now better documented by having their own file,
instead of being hidden at various places in build.gradle.kts.